# stocker

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  architecture.md  data-model.md  derived_metrics_ui.md  docker-compose.yml  implementation-plan.md  tooling.md
.claude/: settings.local.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  backfill_signal_performance.py  celerybeat-schedule  check_db_signals.py  fake_close_signal.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2d6c6be6a1c1_add_user_defined_universes.py  6a4b9ddc3f6a_expand_market_sentiment.py  72717c4be009_add_order_idempotency_constraint.py  893a09ca3205_initial_schema.py  a1b2c3d4e5f6_add_strategy_config.py  b7d3a8c2f91e_add_instrument_metrics.py  cc2c5f2b8c1f_add_trading_universe.py  e2c3f7d09d5a_add_corporate_actions_source.py  f6b1c2d3e4f5_add_position_snapshots.py  g7c2d3e4f5g6_add_performance_tables.py  h1c2d3e4f5g7_add_position_states.py  i8d9e0f1g2h3_add_signal_perf_index.py  j2c3d4e5f6g7_add_order_rejection_reason.py  k1a2b3c4d5e6_add_derived_metrics_tables.py
backend/scripts/: backfill_prices.py  migrate_trading_universe_to_global.sql  refresh_universe.sh  run_pipeline.sh  verify_e2e.py
backend/stocker/api/: admin.py  audit.py  instruments.py  main.py  metrics.py  metrics_derived.py  orders.py  performance.py  portfolio.py  signals.py  sse.py  universes.py
backend/stocker/backtesting/: backtest_engine.py
backend/stocker/core/: config.py  database.py  logging.py  metrics.py  redis.py
backend/stocker/models/: __init__.py  base.py  corporate_action.py  daily_bar.py  derived_metric_definition.py  derived_metric_rule.py  derived_metric_rule_set.py  derived_metric_score.py  derived_metric_value.py  execution_metrics_daily.py  fill.py  holding.py  instrument_info.py  instrument_metrics.py  instrument_universe.py  instrument_universe_member.py  intraday_bar.py  market_breadth.py  market_sentiment.py  order.py  performance_metrics_daily.py  portfolio_state.py  position_snapshot.py  position_state.py  signal.py  signal_performance.py  strategy_config.py  strategy_universe.py  target_exposure.py  trading_universe.py
backend/stocker/scheduler/: celery_app.py
backend/stocker/services/: config_service.py  corporate_actions_service.py  derived_metric_score_service.py  derived_metric_seed_service.py  derived_metrics_service.py  instrument_metrics_service.py  market_data_service.py  market_sentiment_service.py  performance_calculator.py  portfolio_sync_service.py  trading_universe_service.py  universe_service.py
backend/stocker/strategy/: derived_metrics_engine.py  diversification.py  exit_rules.py  portfolio_optimizer.py  signal_enhancer.py  signal_strategy.py
backend/stocker/stream_consumers/: base.py  broker_consumer.py  derived_metrics_consumer.py  exit_consumer.py  ledger_consumer.py  monitor_consumer.py  order_consumer.py  performance_consumer.py  portfolio_consumer.py  signal_consumer.py
backend/stocker/tasks/: __init__.py  corporate_actions.py  derived_metrics.py  instrument_metrics.py  market_data.py  market_sentiment.py  order_retry.py  order_sync.py  portfolio.py  position_state.py  universe_refresh.py
(+131 files in other folders)
